Tue Mar 25 08:22:03 2003  Ossama Othman  <ossama@uci.edu>

	* m4/ace.m4:
	* m4/compiler.m4:
	* m4/platform.m4:

	  Applied Steve's change below to the remaining 'test -n/-z
	  "$GXX"' instances.  Addresses some problems in non-GNU compiler
	  builds.

Fri Mar 21 23:17:26 2003  Steve Huston  <shuston@riverace.com>

	* configure.ac: Changed <test -n "$GXX"> to <test "$GXX" = yes> to
	  work when GXX is set to no, not nul.

Wed Mar 19 11:29:25 2003  Ossama Othman  <ossama@uci.edu>

	* configure.ac (ACE_HAS_POSIX_GETPWNAM_R):

	  Only define this macro if the user hasn't disabled reentrant
	  function support.

Wed Mar 19 11:10:50 2003  Ossama Othman  <ossama@uci.edu>

	* configure.ac:

	  If reentrant functions are enabled by the user and detected by
	  the `configure' script, make sure "_REENTRANT" is added to the
	  preprocessor flags.  [Bug 411]

	  Added test for ACE_HAS_POSIX_GETPWNAM_R macro.  Fixes problems
	  on Linux when threading is disabled.  [Bug 914]

	  The restartable system calls test was re-enabled in earlier
	  commits.  [Bug 275]

	* m4/compiler.m4 (OCXXFLAGS):

	  Added missing HP-UX aCC compiler optimization flag.

	* m4/config_h.m4 (ACE_HAS_POSIX_GETPWNAM_R):

	  Added autoheader template for this macro.

Fri Mar 14 11:38:56 2003  Ossama Othman  <ossama@uci.edu>

	* tests/Dirent_Test.cpp (TEST_ENTRY):

	  Changed name of file from "Dirent_Test.cpp" to "Makefile".  The
	  latter is the only one guaranteed to exist in autoconf based
	  VPATH builds.  Dirent_Test was failing since "Dirent_Test.cpp"
	  did not exist in the current working directory so pick one that
	  will always exist.

Fri Mar 14 10:49:48 2003  Ossama Othman  <ossama@uci.edu>

	* configure.ac (bsearch, mktemp, qsort, rand_r):

	  Temporarily select C as the test language when detecting these
	  functions to work around a bug in some versions of Autoconf when
	  C++ is selected as the test language.  This fixes problems where
	  the following macros were incorrectly defined:
