@@ -403,7 +403,7 @@ AC_DEFUN([ACE_COMPILATION_OPTIONS],
       if test "$GXX" = yes; then
 dnl Temporarily change M4 quotes to prevent "regex []" from being eaten
 changequote(, )dnl
-        if $CXX --version | egrep -v '^2\.[0-7]' > /dev/null; then
+        if $CXX --version | $EGREP -v '^2\.[0-7]' > /dev/null; then
 changequote([, ])dnl
           ACE_CXXFLAGS="$ACE_CXXFLAGS -fno-exceptions"
         fi
@@ -423,7 +423,7 @@ dnl
 dnl    if test "$GXX" = yes; then
 dnl dnl Temporarily change M4 quotes to prevent "regex []" from being eaten
 dnl changequote(, )dnl
-dnl      if $CXX --version | egrep -v '^2\.[0-7]' > /dev/null; then
+dnl      if $CXX --version | $EGREP -v '^2\.[0-7]' > /dev/null; then
 dnl changequote([, ])dnl
 dnl        ACE_CXXFLAGS="$ACE_CXXFLAGS -fno-exceptions"
 dnl      fi
